# super-intelligence-office

./: .gitignore  README.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: mod.rs  personas.rs  tools.rs
src-tauri/src/agents/characters/alex/: COMPANY.md  DISCUSSION_POLICY.md  EVAL.md  PHILOSOPHICAL_REFERENCES.md  PROFILE.md  RELATIONSHIPS.md  SUMMARY.md  TECHNOLOGICAL_REPUBLIC.md  VOICE.md
src-tauri/src/agents/characters/harry/: CHARACTER.md  DISCUSSION_POLICY.md  EVAL.md  HOSTING_RULES.md  KNOWLEDGE.md  MEMORY_SEEDS.md  PERSONA.md  PROFILE.md  RELATIONSHIPS.md  SUMMARY.md  VOICE.md
src-tauri/src/agents/characters/jasmine/: DISCUSSION_POLICY.md  EVAL.md  FEMINIST_LENS.md  NARRATIVE_FRAMEWORK.md  PROFILE.md  RELATIONSHIPS.md  SUMMARY.md  VOICE.md
src-tauri/src/agents/characters/jasper/: DISCUSSION_POLICY.md  EVAL.md  FIELDWORK_METHOD.md  INFORMATION_DIET.md  MACRO_FRAMEWORK.md  PROFILE.md  REGIONAL_MAP.md  RELATIONSHIPS.md  SUMMARY.md  VOICE.md
src-tauri/src/agents/characters/marc/: DISCUSSION_POLICY.md  EVAL.md  INVESTMENT_FRAMEWORK.md  PROFILE.md  RELATIONSHIPS.md  SUMMARY.md  TECHNO_OPTIMISM.md  VOICE.md  (+1 more)
src-tauri/src/agents/persona_docs/: default.md
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/llm/: deepseek.rs  mod.rs  search.rs
src-tauri/src/models/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/services/files/: mod.rs
(+95 files in other folders)
